--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d dist"
+   
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
